# dbi-glongo

./: .gitignore  Cargo.toml  Makefile  README.adoc  README.md  docker-compose.yaml  gleam.toml  manifest.toml
.github/workflows/: test.yml
gwip/: Cargo.toml
gwip/src/: gwip.rs  main.rs
server/: docker-compose.yml  gleam.toml  manifest.toml
server/src/: collections.gleam  server.gleam
src/: app.rs  blog.gleam  glongo.gleam  lib.rs  main.c  main.rs  methods.rs
src/components/: home.rs  mod.rs  utils.rs  view.rs  write.rs
src/database/: dtos.rs  entities.rs  mod.rs
src/server/: mod.rs
style/: main.scss
weather-api/: Cargo.toml  README.md
weather-api/src/: main.rs
weather-api/src/weatherlist/: models.rs  services.rs
web/: gleam.toml  manifest.toml
web/src/: web.gleam
